src/code/Highlight.module.css
.pre :global(.line) * {
  display: inline-block;
}

.pre.lineNumbers :global(.line::before) {
  display: inline-block;
  margin-right: theme("spacing.6");
  width: var(--line-number-width, 1ch);
  content: attr(data-line);
  color: theme("colors.gray.600");
  text-align: right;
}

.pre :global(:is(.space, .tab)) {
  position: relative;
}
.pre :global(:is(.space, .tab))::before {
  position: absolute;
  color: transparent;
}
.pre :global(:is(.space, .tab).selected)::before {
  color: theme("colors.gray.600");
}
.pre :global(.space)::before {
  content: "\0000B7";
}
.pre :global(.tab)::before {
  content: "\002192";
}

.pre :global(.section-context) {
  display: none;
}
.pre :global(.section-content .section-indent) {
  display: none;
}

.pre::selection,
.pre *::selection {
  background-color: rgb(from theme("colors.gray.600") r g b / 50%);
}

